--- a/WebDeveloper/HTML/index_4.html
+++ b/WebDeveloper/HTML/index_4.html
@@ -5,8 +5,7 @@
     <title>My first website</title>
   </head>
   <body>
-    <a href="newPage.html">New Page</a><br>
-    <a href="register.html">Register</a>
+    <a href="newPage.html">New Page</a>
     <ol>
       <li>mango</li>
       <li>apple</li>
