--- a/WebDeveloper/CSS/login.html
+++ b/WebDeveloper/CSS/login.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>CSS</title>
+	<link rel="stylesheet" type="text/css" href="style2.css">
 </head>
 <body>
 	<header>
@@ -16,7 +17,9 @@
 	</header>
 	<section>
 		<h2>Login</h2>
-		<p>Lorem ipsum.</p>
+		<div class="boxmodel">A</div>
+		<div class="boxmodel">B</div>
+		<div class="boxmodel">C</div>
 	</section>
 </body>
 </html>
