--- a/WebDeveloper/CSS/about.html
+++ b/WebDeveloper/CSS/about.html
@@ -3,6 +3,15 @@
 <head>
 	<meta charset="utf-8">
 	<title>CSS</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Klee+One&display=swap" rel="stylesheet"> 
+	<!-- <style>
+		li {
+			background-color: yellow;
+		}
+	</style> -->
 </head>
 <body>
 	<header>
@@ -16,7 +25,15 @@
 	</header>
 	<section>
 		<h2>About</h2>
-		<p>Lorem ipsum.</p>
+		<img src="https://toppng.com/uploads/preview/black-cat-face-fluffy-wallpaper-115551700689c5cc1osmg.jpg"
+		width="200px" height="200px">
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	</section>
+	<footer>Website Made with Love</footer>
 </body>
 </html>
