--- a/WebDeveloper/CSS/index.html
+++ b/WebDeveloper/CSS/index.html
@@ -3,8 +3,10 @@
 <head>
 	<meta charset="utf-8">
 	<title>CSS</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+	<!-- <header style="background-color: grey; color: red;"> -->
 	<header>
 		<nav>
 			<ul>
@@ -16,7 +18,18 @@
 	</header>
 	<section>
 		<h2>Home</h2>
-		<p>Lorem ipsum.</p>
+		<div id="div1">
+			<p class="webtext active">Lorem ipsum.</p>
+			<p class="webtext">Lorem ipsum.</p>
+			<p class="webtext">Lorem ipsum.</p>
+			<p class="webtext">Lorem ipsum.</p>
+		</div>
+		<div id="div2">
+			<p class="webtext active">Lorem ipsum.</p>
+			<p class="webtext">Lorem ipsum.</p>
+			<p class="webtext">Lorem ipsum.</p>
+			<p class="webtext">Lorem ipsum.</p>
+		</div>
 	</section>
 </body>
 </html>
